fix: missing cursor pointer and wrong margin at date dropdown

--- a/src/components/Date-dropdown/Date-dropdown.scss
+++ b/src/components/Date-dropdown/Date-dropdown.scss
@@ -12,6 +12,16 @@
     @include font-montserrat-h3;
   }
 
+  &__input {
+    & > .input__wrapper > .input {
+      cursor: pointer;
+    }
+
+    &:first-child {
+      margin-right: 20px;
+    }
+  }
+
   &__input-filter {
     width: 100%;
   }
